# HW_27

./: db.sqlite3  pyproject.toml  pytest.ini
HW_27/: settings.py  urls.py
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_description.py  0002_initial.py  0003_rename_author_id_ad_author.py  0003_selection.py  0004_category_slug_alter_ad_name_alter_ad_price.py  0005_alter_category_slug.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py  selection.py
data/: ad.json  ads.json  csv_to_json.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py  0002_user_birth_date_alter_user_age_alter_user_email.py  0003_alter_user_birth_date.py
